ffi/derive/tests/ui_fail/nested_owned_structure.stderr
error[E0277]: the trait bound `IrVec<FfiStruct, Opaque<FfiStruct>>: NonLocal` is not satisfied
  --> tests/ui_fail/nested_owned_structure.rs:12:1
   |
12 | #[ffi_export]
   | ^^^^^^^^^^^^^ the trait `NonLocal` is not implemented for `IrVec<FfiStruct, Opaque<FfiStruct>>`
   |
   = help: the trait `NonLocal` is implemented for `IrVec<T, Transparent<T>>`
   = note: required because of the requirements on the impl of `COutPtr` for `IrVec<Vec<FfiStruct>, IrVec<FfiStruct, Opaque<FfiStruct>>>`
   = note: this error originates in the attribute macro `ffi_export` (in Nightly builds, run with -Z macro-backtrace for more info)
